--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nebular/theme": "^3.2.1",
     "@types/date-fns": "^2.6.0",
     "@types/moment": "^2.13.0",
+    "angular-bootstrap-datetimepicker": "^3.0.0",
     "angular2-chartjs": "^0.5.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
@@ -36,9 +37,12 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "nebular-icons": "^1.1.0",
+    "ng-country-flags": "^1.0.7",
     "ng2-completer": "^2.0.8",
     "ng2-smart-table": "^1.3.5",
     "node-sass": "^4.8.1",
+    "open-iconic": "^1.1.1",
+    "react-native-picker-cascader": "^1.0.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
