--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@nebular/date-fns": "^3.2.1",
     "@nebular/moment": "^3.2.1",
     "@nebular/theme": "^3.2.1",
+    "@syncfusion/ej2-angular-calendars": "^17.2.36",
+    "@syncfusion/ej2-charts": "^17.2.36",
+    "@syncfusion/ej2-grids": "^17.2.40",
     "@types/date-fns": "^2.6.0",
     "@types/moment": "^2.13.0",
     "angular-bootstrap-datetimepicker": "^3.0.0",
+    "angular-chart.js": "^1.1.1",
     "angular2-chartjs": "^0.5.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
     "date-fns": "^1.30.1",
     "eva-icons": "^1.1.1",
@@ -40,6 +44,7 @@
     "ng-country-flags": "^1.0.7",
     "ng2-completer": "^2.0.8",
     "ng2-smart-table": "^1.3.5",
+    "ngx-bootstrap": "^5.1.1",
     "node-sass": "^4.8.1",
     "open-iconic": "^1.1.1",
     "react-native-picker-cascader": "^1.0.0",
