--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "angular-bootstrap-datetimepicker": "^3.0.0",
     "angular-chart.js": "^1.1.1",
     "angular2-chartjs": "^0.5.1",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.5.4",
     "date-fns": "^1.30.1",
     "eva-icons": "^1.1.1",
