--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nebular-icons": "^1.1.0",
     "ng-country-flags": "^1.0.7",
     "ng2-completer": "^2.0.8",
+    "ng2-date-picker": "^2.12.0",
     "ng2-smart-table": "^1.3.5",
     "ngx-bootstrap": "^5.1.1",
     "node-sass": "^4.8.1",
