--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "angular-bootstrap-datetimepicker": "^3.0.0",
     "angular-chart.js": "^1.1.1",
     "angular2-chartjs": "^0.5.1",
+    "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.5.4",
     "date-fns": "^1.30.1",
@@ -49,8 +50,8 @@
     "node-sass": "^4.8.1",
     "open-iconic": "^1.1.1",
     "react-native-picker-cascader": "^1.0.0",
-    "rxjs": "~6.4.0",
-    "rxjs-compat": "^6.4.0",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "tslib": "^1.9.0",
     "xlsx": "^0.13.5",
     "zone.js": "~0.8.26"
