--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nebular/moment": "^3.2.1",
     "@nebular/theme": "^3.2.1",
     "@syncfusion/ej2-angular-calendars": "^17.2.36",
+    "@syncfusion/ej2-angular-dropdowns": "^17.2.41",
     "@syncfusion/ej2-charts": "^17.2.36",
     "@syncfusion/ej2-grids": "^17.2.40",
     "@types/date-fns": "^2.6.0",
@@ -43,6 +44,7 @@
     "moment": "^2.24.0",
     "nebular-icons": "^1.1.0",
     "ng-country-flags": "^1.0.7",
+    "ng-multiselect-dropdown": "^0.2.3",
     "ng2-completer": "^2.0.8",
     "ng2-date-picker": "^2.12.0",
     "ng2-smart-table": "^1.5.0",
