--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-picker-cascader": "^1.0.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
+    "sweetalert2": "^8.16.3",
     "tslib": "^1.9.0",
     "xlsx": "^0.13.5",
     "zone.js": "~0.8.26"
