--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "nebular-icons": "^1.1.0",
     "ng-country-flags": "^1.0.7",
     "ng-multiselect-dropdown": "^0.2.3",
+    "ng2-cloudinary": "^0.9.2",
     "ng2-completer": "^2.0.8",
     "ng2-date-picker": "^2.12.0",
+    "ng2-file-upload": "^1.3.0",
     "ng2-smart-table": "^1.5.0",
     "ngx-bootstrap": "^5.1.1",
     "node-sass": "^4.8.1",
